duniverse/cstruct.5.1.1/ppx_test/errors/cstruct_several_attributes.ml
[%%cstruct
  type t =
    { a : uint8_t
    }
  [@@little_endian]
  [@@other_attr]
]
